# backend/internal/database/schema.go
@@ -29,6 +29,8 @@ func Models() []any {
 		&model.UserIdentity{},
 		&model.OAuthState{},
 		&model.EmailVerificationCode{},
+		&model.PublicAPIKey{},
+		&model.PublicGenerationRequest{},
 		&model.ModelChannel{},
 		&model.ChannelModel{},
 		&model.ChannelModelPriceTier{},
